# logify

./: Cargo.toml  README.txt
examples/: optimizer.rs  permissions.rs  product_filter.rs
src/: builder.rs  eval.rs  expr.rs  lib.rs  macros.rs  opt.rs
src/builder/: convert.rs  logic_node.rs
src/eval/: bitwise_eval.rs  bool_eval.rs
src/expr/: basic.rs  convert.rs  iter.rs  ops.rs
src/opt/: algo.rs  merger.rs
